[package]
name = "rust_ui_starters"
version = "0.1.0"
edition = "2024"

# pnpm run watch:css
# trunk serve --open

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = "0.3"
